# look_and_say

./: LICENSE  dune-project  look_and_say.opam
lib/: dune
test/: dune
